@@ -21,23 +21,22 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 
 @Configuration
 public class SwaggerConfiguration {
-	private static final String BASIC_AUTH = "basicAuth";
+	//private static final String BASIC_AUTH = "basicAuth";
 	@Bean  //Bean - Indicates that a method produces a bean to be managed by the Spring container. 
-    //Docket - A builder which is intended to be the primary interface into the Springfox framework
-    public Docket api(){
-		 HttpAuthenticationScheme authenticationScheme = HttpAuthenticationScheme
-		            .BASIC_AUTH_BUILDER
-		            .name("Basic Authentication")
-		            .build();
-		 
-        return new Docket(DocumentationType.OAS_30)
+	//Docket - A builder which is intended to be the primary interface into the Springfox framework
+	public Docket api(){
+// 		 HttpAuthenticationScheme authenticationScheme = HttpAuthenticationScheme
+// 		            .BASIC_AUTH_BUILDER
+// 		            .name("Basic Authentication")
+// 		            .build();
+		 return new Docket(DocumentationType.OAS_30)
                 .select()
                 .apis(RequestHandlerSelectors.basePackage("com.demo"))
                 .paths(PathSelectors.any())
                 .build().apiInfo(apiEndPointInfo())
-                .securitySchemes(Collections.singletonList(authenticationScheme))
-                .securityContexts(List.of(securityContext()));
-    }
+//                 .securitySchemes(Collections.singletonList(authenticationScheme))
+//                 .securityContexts(List.of(securityContext()));
+	}
    
 	public ApiInfo apiEndPointInfo(){
         return new ApiInfoBuilder().title("EMPLOYEE MANAGEMENT SYSTEM")
@@ -47,18 +46,18 @@ public class SwaggerConfiguration {
                 .licenseUrl("http://www.apache.org/licenses/LICENSE-2.0.html")
                 .version("0.0.1-SNAPSHOT")
                 .build();
-    }
+	}
 	
-	@SuppressWarnings("unused")
-	private List<SecurityScheme> securitySchemes() {
-       return List.of(new BasicAuth(BASIC_AUTH));
-   }
-//	A class to represent a default set of authorizations to apply to each api operation
-   private SecurityContext securityContext() {
-       return SecurityContext.builder().securityReferences(Arrays.asList(basicAuthReference())).build();
-   }
+// 	@SuppressWarnings("unused")
+// 	private List<SecurityScheme> securitySchemes() {
+//        return List.of(new BasicAuth(BASIC_AUTH));
+//    }
+// //	A class to represent a default set of authorizations to apply to each api operation
+//    private SecurityContext securityContext() {
+//        return SecurityContext.builder().securityReferences(Arrays.asList(basicAuthReference())).build();
+//    }
    
-   private SecurityReference basicAuthReference() {
-       return new SecurityReference(BASIC_AUTH, new AuthorizationScope[0]);
-   }
+//    private SecurityReference basicAuthReference() {
+//        return new SecurityReference(BASIC_AUTH, new AuthorizationScope[0]);
+//    }
 }
